Updated swagger and removed unused code
