# routes/bookRouter.js
@@ -7,14 +7,10 @@ const {
   getTopBooks,
   getBooksByGenre,
   getBooksBySearch,
-  getUniqueByFieldName, 
-  createBook,
-  updateBook,
-  deleteBook,
+  getUniqueByFieldName,
   getReviewsByBookId,
 } = require('../controllers/bookControllers');
-// const requireAuth = require('../middleware/requireAuth');
-// const requireAdmin = require('../middleware/requireAdmin');
+
 
 // GET /books
 router.get('/', getAllBooks);
@@ -39,17 +35,5 @@ router.get('/search/:searchQuery', getBooksBySearch);
 
 // GET /books/unique/:fieldName
 router.get('/unique/:fieldName', getUniqueByFieldName);
-
-// require auth with admin account for the rest of operations (will be uncommented after development)
-// router.use(requireAuth, requireAdmin);
-
-// POST /books
-router.post('/', createBook);
-
-// PATCH /books/:bookId
-router.patch('/:bookId', updateBook);
-
-// DELETE /books/:bookId
-router.delete('/:bookId', deleteBook);
 
 module.exports = router;
